--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ body {
   font-size: 24;
   line-height: 28px;
 }
-.advantages-list:first-child,
-.advantages-list:last-child {
+.advantages-list:nth-child(1),
+.advantages-list:nth-child(5) {
   background-color: #82B3D3;
   color: #ffffff;
 }
