--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,12 @@ body {
 .main-header {
   background: #ffffff;
   color: #000000;
+  display: flex;
 }
+.header-navigation {
+  display: flex;
+}
+
 .main-header a {
   color: #000000;
   text-transform: capitalize;
@@ -199,6 +204,10 @@ body {
   line-height: 28px;
   font-weight: 700;
 }
+.products-card-link {
+  text-decoration: none;
+  color: #000000;
+}
 .products-card-text {
   font-size: 18px;
   line-height: 21px;
@@ -218,4 +227,29 @@ body {
 }
 .products-card-favorites {
   background-color: #82B3D3;
+}
+.catalog-pagination-link {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #82B3D3;
+}
+.catalog-pagination-list,
+.catalog-filter-list,
+.catalog-products-list,
+.breadcrumbs,
+.header-navigation-list,
+.navigation-user-menu,
+.advantages-list,
+.main-infrastructure-list,
+.social-media-list {
+  list-style-type: none;
+}
+.breadcrumbs {
+  display: flex;
+}
+.navigation-user-menu {
+  display: flex;
+}
+.header-navigation-list {
+  display: flex;
 }
