--- a/styles/style.css
+++ b/styles/style.css
@@ -243,7 +243,7 @@ body {
 .main-infrastructure-list,
 .social-media-list {
   list-style-type: none;
-  padding-left: 0;
+  padding: 0;
 }
 .breadcrumbs {
   display: flex;
