--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "PT Sans";
-  src: url(../fonts/ptsans-400.woff2);
+  src: url("../fonts/ptsans-400.woff2");
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -8,22 +8,14 @@
 
 @font-face {
   font-family: "PT Sans";
-  src: url(../fonts/ptsans-700.woff2);
+  src: url("../fonts/ptsans-700.woff2");
   font-style: normal;
   font-weight: 700;
   font-display: swap;
 }
 
-@font-face {
-  font-family: "PT Sans";
-  src: url(../fonts/ptsans-700.woff2);
-  font-style: bold;
-  font-weight: 700;
-  font-display: swap;
-}
-
-.visually-hidden {
-  display: none;
+html {
+  height: 100%;
 }
 
 body {
@@ -33,9 +25,31 @@ body {
   color: #000000;
   font-weight: 400;
   margin: 0;
+  background-color: #F2F2F2;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  background-color: #ffffff;
+}
+
+.main-container {
+  flex-grow: 1;
+}
+
+.catalog-container {
+  flex-grow: 1;
 }
 
 .button {
+  font-family: "PT Sans", sans-serif;
   text-align: center;
   background-color: #756157;
   text-transform: uppercase;
@@ -45,10 +59,63 @@ body {
 .main-header {
   background: #ffffff;
   color: #000000;
+  height: 64px;
+  display: flex;
+  flex-direction: row;
 }
+
 .header-navigation {
   display: flex;
   justify-content: space-between;
+  flex-grow: 1;
+}
+
+.page-header-logo {
+  margin-left: 40px;
+  margin-right: 30px;
+}
+
+.navigation-user-menu {
+  display: flex;
+  align-items: center;
+}
+
+.header-navigation-list {
+  display: flex;
+  align-items: center;
+}
+
+.header-navigation-item {
+  padding: 0 16px;
+}
+
+.navigation-search {
+  margin-right: 25px;
+}
+
+.navigation-favorites {
+  margin-right: 33px;
+}
+
+.navigation-registration {
+  margin-right: 70px;
+}
+
+.navigation-user-registration {
+  box-sizing: border-box;
+  border-radius: 4px;
+  width: 160px;
+  height: 36px;
+  border: 0;
+}
+
+.main-wellcome-to-sedona-img {
+  margin-top: 50px;
+}
+
+.main-advantages {
+  background-color: #ffffff;
+  padding-top: 69px;
 }
 
 .main-header a {
@@ -59,6 +126,7 @@ body {
   line-height: 24px;
   font-style: bold;
 }
+
 .navigation-user-registration {
   font-weight: 700;
   font-size: 16px;
@@ -68,64 +136,182 @@ body {
 .main-index {
   text-align: center;
 }
+
 .main-title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
+  margin-bottom: 25px;
 }
+
 .main-text {
   font-size: 22px;
   line-height: 26px;
 }
+
+.advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.advantages-item {
+  width: 400px;
+  height: 385px;
+  position: relative;
+}
+
+.advantages-item-big {
+  width: 1200px;
+  display: flex;
+}
+
+.advantages-item-text-container {
+  display: flex;
+  flex-direction: column;
+  padding: 102px 85px;
+  width: 400px;
+  box-sizing: border-box;
+}
+
 .advantages-item-title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  margin-bottom: 62px;
+  text-transform: uppercase;
 }
+
+.pseudo-elements-light::after {
+  content: '';
+  border: 1px solid #FFFFFF4D;
+  background-color: #FFFFFF4D;
+  box-sizing: border-box;
+  position: absolute;
+  left: 170px;
+  top: 200px;
+  width: 60px;
+  height: 2px;
+}
+
+.pseudo-elements-relative-dark {
+  position: relative;
+}
+
+.pseudo-elements-dark::after {
+  content: '';
+  border: 1px solid #0000004D;
+  background-color: #0000004D;
+  box-sizing: border-box;
+  position: absolute;
+  left: 170px;
+  top: 200px;
+  width: 60px;
+  height: 2px;
+}
+
 .advantages-item:first-child,
 .advantages-item:last-child {
   background-color: #82B3D3;
   color: #ffffff;
 }
+
 .advantages-item:nth-child(2),
 .advantages-item:nth-child(4) {
   background-color: #83B3D31F;
 }
+
 .advantages-item:nth-child(3) {
   background-color: #83B3D333;
 }
+
 .advantages-item-text {
   font-size: 18px;
   line-height: 21px;
 }
+
+.infrastructure {
+  background-color: #ffffff;
+  padding-top: 64px;
+}
+
+.main-infrastructure-list {
+  display: flex;
+}
+
+.main-infrastructure-item {
+  padding: 80px 85px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 385px;
+  width: 400px;
+  box-sizing: border-box;
+}
+
+.infrastructure-item-light {
+  background-color: #83B3D31F;
+}
+
+.main-infrastructure-img {
+  margin-bottom: 30px;
+}
+
 .main-infrastructure-title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  margin-bottom: 30px;
 }
+
+.infrastructure-title {
+  text-transform: uppercase;
+}
+
+.infrastructure-text {
+  margin-bottom: 64px;
+}
+
 .main-infrastructure-text {
   font-size: 18px;
   line-height: 21px;
 }
+
 .main-infrastructure-list:nth-child(1),
 .main-infrastructure-list:nth-child(3) {
   background-color: #83B3D31F;
 }
+
+.main-hotel-search {
+  background-color: #ffffff;
+  padding: 96px 0;
+}
+
 .search-hotel {
- font-weight: 700;
- font-size: 20px;
- line-height: 36px;
-}
-.newsletter-title,
-.newsletter-text {
-  color: #ffffff;
-}
-.newsletter-submit {
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
+  border-radius: 4px;
+  border: 0;
+  width: 376px;
+  height: 52px;
+}
+
+.search-hotel-title {
+  margin-bottom: 20px;
+}
+
+.search-hotel-text {
+  margin-bottom: 54px;
+}
+
+.newsletter-title,
+.newsletter-text {
   color: #ffffff;
-  background-color: #82B3D3;
+  margin: 0;
+}
+
+.newsletter-title {
+  margin-bottom: 20px;
 }
 
 .footer-contact-tel {
@@ -135,19 +321,57 @@ body {
   text-decoration: none;
 }
 
-
 .welcome-image-background {
   background-image: url(../images/substrate.svg), url("../images/index-background.jpg");
   background-size: 100% auto, cover;
   background-repeat: no-repeat;
   background-position: left bottom, left top;
   background-color: #82B3D3;
+  height: 485px;
 }
+
 .main-newsletter {
   background-image: url("../images/subscribe-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
+  padding-top: 96px;
 }
+
+.newsletter-form {
+  display: flex;
+  justify-content: center;
+}
+
+.main-infrastructure-title {
+  margin-bottom: 20px;
+}
+
+.newsletter-text {
+  margin-bottom: 54px;
+}
+
+.newsletter-input {
+  width: 452px;
+  height: 52px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 4px 0 0 4px;
+  margin-bottom: 104px;
+}
+
+.newsletter-submit {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  color: #ffffff;
+  background-color: #82B3D3;
+  border-radius: 0 4px 4px 0;
+  width: 232px;
+  height: 52px;
+  border: 0;
+  margin-bottom: 104px;
+}
+
 .background-image-filter {
   background-image: url("../images/filter-background.jpg");
   background-size: 100% auto;
@@ -155,44 +379,27 @@ body {
   color: #ffffff;
 }
 
-
 .inner-header-title {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
 }
+
 .breadcrumbs-link {
   font-size: 16px;
   line-height: 21px;
 }
+
 .breadcrumbs-item a {
   text-decoration: none;
   color: #ffffff;
 }
-.catalog-filter-title {
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 700;
-}
+
 .control {
   font-size: 18px;
   line-height: 23px;
 }
-.button-filter {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 700;
-  color: #ffffff;
-}
-.catalog-filter-submit {
-  background-color: #82B3D3;
-}
-.catalog-filter-reset {
-  background-color: #ffffff00;
-}
-.catalog-filter {
-  display: flex;
-}
+
 .hotels-navigationquantity {
   font-size: 30px;
   font-weight: 700;
@@ -207,34 +414,40 @@ body {
   line-height: 28px;
   font-weight: 700;
 }
+
 .products-card-link {
   text-decoration: none;
   color: #000000;
 }
+
 .products-card-text {
   font-size: 18px;
   line-height: 21px;
 }
+
 .products-card-buttons {
   font-size: 16px;
   line-height: 20px;
 }
+
 .products-card-link-buttons,
 .products-card-favorites {
   font-weight: 700;
   color: #ffffff;
 }
+
 .products-card-link-buttons {
   text-decoration: none;
   background-color: #756157;
 }
+
 .products-card-favorites {
   background-color: #82B3D3;
 }
+
 .catalog-pagination-link {
   text-decoration: none;
   color: #ffffff;
-  background-color: #82B3D3;
 }
 
 .catalog-pagination-list,
@@ -250,17 +463,258 @@ body {
   padding-left: 0;
   margin: 0;
 }
+
 .breadcrumbs {
   display: flex;
+  margin-bottom: 40px;
 }
-.navigation-user-menu {
-  display: flex;
-}
-.header-navigation-list {
-  display: flex;
+.breadcrumbs-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .pagiation-link-active {
   color: #000000;
+}
+
+.main-footer {
+  display: flex;
+  justify-content: space-between;
+  min-height: 120px;
+  align-items: center;
+}
+
+.social-media-list {
+  margin-left: 81.67px;
+  display: flex;
+  align-items: center;
+}
+
+.media-vk {
+  margin-right: 26.3px;
+}
+
+.media-telegram {
+  margin-right: 27.3px;
+}
+
+.footer-contact-link {
+  margin-right: 70px;
+}
+
+.catalog-title {
+  margin: 0;
+}
+
+.filter-container {
+  width: 1060px;
+  padding: 35px 70px 70px 70px;
+}
+
+.catalog-filter-title {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  margin-bottom: 32px;
+}
+
+.button-filter {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.catalog-filter-submit {
+  background-color: #82B3D3;
+  margin-bottom: 32px;
+}
+
+.catalog-filter-reset {
+  background-color: #ffffff00;
+}
+
+.catalog-filter-form {
+  display: flex;
+  flex-direction: row;
+}
+
+.catalog-filter-group {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  border: 0 none;
+}
+
+.filter-infrastructure {
+  margin-right: 70px;
+  width: 150px;
+}
+
+.filter-type-of-house {
+  width: 150px;
+  margin-right: 140px;
+}
+
+.filter-price {
+  width: 288px;
+}
+
+.catalog-range {
+  width: 160px;
+  margin-right: 70px;
+}
+
+.catalog-inputs-range {
+  display: flex;
+}
+
+.catalog-range-input {
+  width: 143px;
+  height: 48px;
+  border: 0;
+}
+
+.catalog-range-price {
+  margin-top: auto;
+}
+
+.range-price {
+  width: 288px;
+}
+
+.price-start {
+  border-radius: 4px 0 0 4px;
+  margin-right: 2px;
+}
+
+.price-end {
+  border-radius: 0 4px 4px 0;
+}
+
+.filter-list-button {
+  justify-content: flex-end;
+}
+
+.button-filter {
+  width: 191px;
+  border-radius: 4px;
+  height: 36px;
+  padding: 0;
+  border: 0;
+}
+
+.control-input {
+  margin: 0;
+}
+
+.catalog-filter-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.catalog-products-container {
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-top: 50px;
+  background-color: #ffffff;
+}
+
+.catalog-header-hotels {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.select-control {
+  width: 292px;
+  height: 49px;
+  border-radius: 4px;
+  border: 2px solid #E5E5E5;
+  padding-left: 14px;
+  box-sizing: border-box;
+}
+
+.select-control-cheap,
+.select-control-expensive {
+  padding: 0;
+}
+
+.hotels-navigationquantity {
+  margin-right: 200px;
+}
+
+.catalog-card-variant {
+  width: 48px;
+  height: 48px;
+
+}
+
+.catalog-products-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  margin-bottom: 80px;
+}
+
+.catalog-pagination {
+  padding-bottom: 60px;
+}
+
+.catalog-pagination-list {
+  display: flex;
+}
+
+.catalog-pagination-item {
+  width: 60px;
+  height: 60px;
+  background-color: #82B3D3;
+  align-self: center;
+  margin-right: 8px;
+  border-radius: 4px;
+}
+
+.catalog-pagination-item:last-child {
+  margin-right: 0;
+}
+
+.pagination-active {
   background-color: #F2F2F2;
+}
+
+.catalog-pagination-link {
+  background-color: #ffffff00;
+}
+
+.pagination-link-active {
+  color: #000000;
+}
+
+.catalog-pagination-item-ellipses {
+  background-color: #f2f2f200;
+}
+
+.catalog-newsletter {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  text-align: center;
+  padding-top: 96px;
+  padding-bottom: 0;
+  height: 414px;
+}
+
+.newsletter-input-catalog {
+  background-color: #F2F2F2;
+}
+
+.newsletter-title-catalog {
+  margin-bottom: 20px;
+}
+
+.newsletter-text-catalog {
+  margin-top: 0;
+  margin-bottom: 54px;
+}
+
+.visually-hidden {
+  display: none;
 }
