--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ body {
   flex-direction: column;
   min-height: 100%;
   background-color: #ffffff;
+  box-shadow: #00000033;
 }
 
 .main-container {
@@ -59,42 +60,53 @@ body {
 .main-header {
   background: #ffffff;
   color: #000000;
-  height: 64px;
   display: flex;
   flex-direction: row;
+  min-height: 64px;
 }
 
 .header-navigation {
   display: flex;
   justify-content: space-between;
   flex-grow: 1;
+  gap: 30px;
+}
+
+.navigation-logo {
+  margin-right: 30px;
+  margin-left: 40px;
 }
 
 .page-header-logo {
-  margin-left: 40px;
-  margin-right: 30px;
+  position: relative;
 }
 
 .navigation-user-menu {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+.navigation-user-link {
+  padding: 22px 12px;
+  min-width: 44px;
 }
 
 .header-navigation-list {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  flex-grow: 1;
 }
 
-.header-navigation-item {
-  padding: 0 16px;
-}
-
-.navigation-search {
-  margin-right: 25px;
+.header-navigation-link {
+  min-width: 100px;
+  min-height: 64px;
+  padding: 20px 16px;
 }
 
 .navigation-favorites {
-  margin-right: 33px;
+  margin-right: 20px;
 }
 
 .navigation-registration {
@@ -155,14 +167,16 @@ body {
 }
 
 .advantages-item {
-  width: 400px;
-  height: 385px;
+  min-height: 385px;
+  flex-grow: 1;
   position: relative;
 }
 
 .advantages-item-big {
   width: 1200px;
   display: flex;
+  background-color: #82B3D3;
+  color: #ffffff;
 }
 
 .advantages-item-text-container {
@@ -188,7 +202,7 @@ body {
   box-sizing: border-box;
   position: absolute;
   left: 170px;
-  top: 200px;
+  top: 190px;
   width: 60px;
   height: 2px;
 }
@@ -204,7 +218,7 @@ body {
   box-sizing: border-box;
   position: absolute;
   left: 170px;
-  top: 200px;
+  top: 190px;
   width: 60px;
   height: 2px;
 }
@@ -227,6 +241,7 @@ body {
 .advantages-item-text {
   font-size: 18px;
   line-height: 21px;
+  margin: 0;
 }
 
 .infrastructure {
@@ -236,6 +251,7 @@ body {
 
 .main-infrastructure-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .main-infrastructure-item {
@@ -246,9 +262,10 @@ body {
   height: 385px;
   width: 400px;
   box-sizing: border-box;
+  flex-grow: 1;
 }
 
-.infrastructure-item-light {
+.infrastructure-item-color:nth-child(2n+1) {
   background-color: #83B3D31F;
 }
 
@@ -404,29 +421,51 @@ body {
   font-weight: 700;
   line-height: 36px;
 }
+
 .select-control {
   font-size: 18px;
   line-height: 21px;
 }
+
 .products-card-title {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
+  margin: 0;
 }
 
 .products-card-link {
   text-decoration: none;
   color: #000000;
+  display: block;
 }
 
 .products-card-text {
   font-size: 18px;
   line-height: 21px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.products-card-text p {
+  margin: 0;
 }
 
 .products-card-buttons {
   font-size: 16px;
   line-height: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card-buttons-item {
+  min-width: 140px;
+  min-height: 36px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
 }
 
 .products-card-link-buttons,
@@ -438,10 +477,18 @@ body {
 .products-card-link-buttons {
   text-decoration: none;
   background-color: #756157;
+  border-radius: 4px;
 }
 
 .products-card-favorites {
   background-color: #82B3D3;
+  border-radius: 4px;
+  border: 0;
+}
+
+.products-card-rating {
+  background-color: #F2F2F2;
+  border-radius: 4px;
 }
 
 .catalog-pagination-link {
@@ -489,12 +536,12 @@ body {
   align-items: center;
 }
 
-.media-vk {
-  margin-right: 26.3px;
-}
-
-.media-telegram {
-  margin-right: 27.3px;
+.social-media-link {
+  width: 47px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-contact-link {
@@ -618,6 +665,13 @@ body {
   background-color: #ffffff;
 }
 
+.catalog-products-card {
+  border-radius: 4px;
+  padding: 20px;
+  box-shadow: 0 0 0 1px #e6e6e6;
+  gap: 16px;
+}
+
 .catalog-header-hotels {
   display: flex;
   justify-content: space-between;
@@ -653,6 +707,12 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   margin-bottom: 80px;
+  gap: 20px;
+}
+
+.catalog-products-card {
+  display: flex;
+  flex-direction: column;
 }
 
 .catalog-pagination {
@@ -672,14 +732,31 @@ body {
 
 .catalog-pagination-list {
   display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
 }
 
-.catalog-pagination-item {
-  width: 60px;
-  height: 60px;
+.catalog-pagination-link {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-width: 60px;
+  min-height: 60px;
   background-color: #82B3D3;
-  align-self: center;
-  margin-right: 8px;
+  border-radius: 4px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.catalog-pagination-item-ellipses {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-width: 60px;
+  min-height: 60px;
+  background-color: #ffffff;
   border-radius: 4px;
 }
 
@@ -687,16 +764,9 @@ body {
   margin-right: 0;
 }
 
-.pagination-active {
-  background-color: #F2F2F2;
-}
-
-.catalog-pagination-link {
-  background-color: #ffffff00;
-}
-
 .pagination-link-active {
   color: #000000;
+  background-color: #F2F2F2;
 }
 
 .catalog-pagination-item-ellipses {
@@ -733,5 +803,12 @@ body {
 }
 
 .visually-hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
