--- a/styles/style.css
+++ b/styles/style.css
@@ -89,8 +89,20 @@ body {
 }
 
 .navigation-user-link {
-  padding: 17px 12px;
   min-width: 44px;
+  padding: 22px;
+}
+
+.nav-link-icon-search {
+  background-image: url(/images/Search.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.nav-link-icon-favorites {
+  background-image: url(/images/favorites.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .header-navigation-list {
@@ -104,6 +116,14 @@ body {
   display: block;
   padding: 20px 16px;
   font-weight: 700;
+}
+
+.navigation-link-active {
+  box-shadow: inset 0 -2px 0 0 #756157;
+}
+
+.navigation-user-svg {
+  margin: auto 0;
 }
 
 .navigation-favorites {
@@ -169,7 +189,7 @@ body {
 
 .main-text-transform {
   margin: 0;
-  margin-bottom: 69px;
+  margin-bottom: 90px;
 }
 
 .advantages-list {
@@ -364,8 +384,29 @@ body {
   text-decoration: none;
 }
 
+.footer-contact-tel:hover {
+  color: #756157;
+}
+
+.footer-contact-tel:focus {
+  color: #756157;
+  outline: none;
+}
+
+.footer-contact-tel:focus:not(:focus-visible){
+  outline: none;
+}
+
+.footer-contact-tel:focus-visible {
+  color: #756157;
+}
+
+.footer-contact-tel:active {
+  color: #7561574D;
+}
+
 .welcome-image-background {
-  background-image: url(../images/substrate.svg), url("../images/index-background.jpg");
+  background-image: url('../images/substrate.svg'), url("../images/index-background.jpg");
   background-size: 100% auto, cover;
   background-repeat: no-repeat;
   background-position: left bottom, left top;
@@ -399,6 +440,7 @@ body {
 }
 
 .newsletter-submit {
+  font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -451,6 +493,30 @@ body {
 .select-control {
   font-size: 18px;
   line-height: 21px;
+  border: 2px solid #E5E5E5;
+}
+
+.select-control:hover {
+  border: 2px solid #68A2CA;
+}
+
+.select-control:focus {
+  border: 2px solid #68A2CA;
+  outline: none;
+}
+
+.select-control:focus:not(:focus-visible){
+  outline: none;
+  border: 2px solid #68A2CA;
+}
+
+.select-control:focus-visible {
+  border: 2px solid #68A2CA;
+}
+
+.select-control:active {
+  border: 2px solid #0000004D;
+  color: #0000004D;
 }
 
 .products-card-title {
@@ -554,10 +620,6 @@ body {
   margin-bottom: 40px;
 }
 
-.breadcrumbs-item:not(:last-child) {
-  margin-right: 10px;
-}
-
 .pagiation-link-active {
   color: #000000;
 }
@@ -585,8 +647,57 @@ body {
   justify-content: center;
 }
 
+.social-media-link:hover path {
+  fill: #68A2CA;
+}
+
+.social-media-link:focus path {
+  fill: #68A2CA;
+  outline: none;
+}
+
+.social-media-link:focus:not(:focus-visible) path {
+  outline: none;
+}
+
+.social-media-link:focus-visible{
+  fill: #68A2CA;
+  outline: none;
+}
+
+.social-media-link:active path {
+  fill: #68A2CA4D;
+}
+
+.footer-contact-link-svg path{
+  fill: #000000;
+}
+
+.footer-contact-link-svg:hover path {
+  fill: #756157;
+}
+
+.footer-contact-link-svg:focus path {
+  fill: #756157;
+  outline: none;
+}
+
+.footer-contact-link-svg:focus:not(:focus-visible) path {
+  outline: none;
+}
+
+.footer-contact-link-svg:focus-visible {
+  fill: #756157;
+  outline: none;
+}
+
+.footer-contact-link-svg:active path {
+  fill: #7561574D;
+}
+
 .catalog-title {
   margin: 0;
+  margin-bottom: 2px;
 }
 
 .filter-container {
@@ -599,6 +710,7 @@ body {
   line-height: 24px;
   font-weight: 700;
   margin-bottom: 32px;
+  padding: 0;
 }
 
 .button-filter {
@@ -627,6 +739,7 @@ body {
   display: flex;
   flex-direction: column;
   border: 0 none;
+  margin-left: 0;
 }
 
 .filter-infrastructure {
@@ -728,6 +841,31 @@ body {
 .catalog-card-variant {
   width: 48px;
   min-height: 48px;
+  background-color: white;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+}
+
+.catalog-card-variant:hover {
+  border: 2px solid black;
+}
+
+.catalog-card-variant:focus {
+  border: 2px solid #68A2CA;
+  outline: none;
+}
+
+.catalog-card-variant:focus:not(:focus-visible) {
+  outline: none;
+}
+
+.catalog-card-variant:focus-visible {
+  border: 2px solid #68A2CA;
+  outline: none;
+}
+
+.catalog-card-variant:active {
+  border: 2px solid black;
 }
 
 .catalog-products-list {
@@ -779,6 +917,73 @@ body {
   border-radius: 4px;
   padding: 10px;
   box-sizing: border-box;
+}
+
+.pagination-link-active {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-width: 60px;
+  min-height: 60px;
+  background-color: #F2F2F2;
+  border-radius: 4px;
+  padding: 10px;
+  box-sizing: border-box;
+  text-decoration: none;
+  cursor: default;
+}
+
+.catalog-pagination-link:hover {
+  background-color: #68A2CA;
+}
+
+.catalog-pagination-link:focus {
+  background-color: #68A2CA;
+  outline: none;
+}
+
+.catalog-pagination-link:focus:not(:focus-visible) {
+  outline: none;
+}
+
+.catalog-pagination-link:focus-visible {
+  background-color: #68A2CA;
+  outline: none;
+}
+
+.catalog-pagination-link:active {
+  background-color: #68A2CA;
+}
+
+.catalog-pagination-link:active {
+  color: #FFFFFF4D;
+}
+
+.pagiation-link-active:hover {
+  background-color: #F2F2F2;
+}
+
+.pagiation-link-active:focus {
+  background-color: #F2F2F2;
+  outline: none;
+}
+
+.pagiation-link-active:focus:not(:focus-visible) {
+  outline: none;
+}
+
+.pagiation-link-active:focus-visible {
+  background-color: #F2F2F2;
+  outline: none;
+}
+
+.pagiation-link-active:active {
+  background-color: #F2F2F2;
+}
+
+.pagiation-link-active:active {
+  color: #000000;
 }
 
 .catalog-pagination-item-ellipses {
@@ -836,6 +1041,26 @@ body {
 .newsletter-form-inner {
   padding-bottom: 104px;
   margin-bottom: 0;
+}
+
+.breadcrumbs-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.breadcrumbs-icon-house {
+  background-image: url(../images/house.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  min-width: 13px;
+  padding: 0 6px;
+}
+
+.breadcrumbs-icon-arrow {
+  background-image: url("../images/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center 12px;
+  padding: 0 6px;
+  min-width: 8px;
 }
 
 .visually-hidden {
