--- a/styles/style.css
+++ b/styles/style.css
@@ -21,13 +21,12 @@ html {
 body {
   font-family: 'PT Sans', sans-serif;
   font-size: 22px;
-  min-height: 100vh;
   line-height: 26px;
   color: #000000;
   font-weight: 400;
   margin: 0;
   background-color: #F2F2F2;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -1159,9 +1158,6 @@ body {
 }
 
 .breadcrumbs-icon-house {
-  background-image: url(../images/house.svg);
-  background-repeat: no-repeat;
-  background-position: center;
   min-width: 13px;
   padding: 0 6px;
 }
