--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ body {
   font-weight: 400;
   margin: 0;
   background-color: #F2F2F2;
-  min-height: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -102,6 +102,28 @@ body {
   background-image: url(../images/favorites.svg);
   background-repeat: no-repeat;
   background-position: center;
+  position: relative;
+}
+
+.nav-link-icon-favorites::before {
+  position: absolute;
+  content: '';
+  background-color: #7DB54F;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  right: 4px;
+  top: 13px;
+}
+
+.favorites-counter {
+  position: absolute;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 10px;
+  color: white;
+  right: 8px;
+  top: 18px;
 }
 
 .header-navigation-list {
@@ -437,7 +459,6 @@ body {
   color: #ffffff;
   width: 684px;
   margin: 0 auto;
-  margin-top: 0;
 }
 
 .newsletter-title {
@@ -1135,14 +1156,12 @@ body {
 }
 
 .newsletter-title-catalog {
-  margin-top: 0;
   margin: 0 auto;
   width: 684px;
   margin-bottom: 20px;
 }
 
 .newsletter-text-catalog {
-  margin-top: 0;
   margin: 0 auto;
   width: 684px;
   margin-bottom: 54px;
