--- a/styles/style.css
+++ b/styles/style.css
@@ -525,6 +525,15 @@ body {
   box-sizing: border-box;
   border: 0;
   border-radius: 4px 0 0 4px;
+  padding: 14px 20px;
+  background-color: #F2F2F2;
+  font: inherit;
+}
+
+.newsletter-input::placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .newsletter-submit {
@@ -900,6 +909,7 @@ body {
   width: 143px;
   height: 48px;
   border: 0;
+  font: inherit;
 }
 
 .catalog-range-price {
@@ -933,6 +943,7 @@ body {
 
 .control-input {
   margin: 0;
+  font: inherit;
 }
 
 .catalog-filter-item:not(:last-child) {
@@ -1153,6 +1164,8 @@ body {
 
 .newsletter-input-catalog {
   background-color: #F2F2F2;
+  padding: 14px 20px;
+  font: inherit;
 }
 
 .newsletter-title-catalog {
