--- a/styles/style.css
+++ b/styles/style.css
@@ -1039,6 +1039,15 @@ body {
   background-color: #ffffff;
 }
 
+.stars-favorite {
+  display: flex;
+  align-items: center;
+}
+
+.stars-favorite svg {
+  margin-right: 6px;
+}
+
 .toggle-button {
   position: absolute;
   height: 20px;
@@ -1307,6 +1316,24 @@ input::-webkit-inner-spin-button {
   color: #000000;
 }
 
+.search-hotel-link {
+  display: block;
+  margin: 0 auto;
+  text-decoration: none;
+  border-radius: 4px;
+  padding: 8px 20px;
+  width: 376px;
+  min-height: 52px;
+  box-sizing: border-box;
+  color: #ffffff  ;
+  background-color: #615048;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .catalog-pagination-item-ellipses {
   display: flex;
   align-content: center;
@@ -1391,6 +1418,20 @@ input::-webkit-inner-spin-button {
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
+  display: none;
+}
+
+.modal-container-link {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
 }
 
 .modal {
@@ -1401,6 +1442,7 @@ input::-webkit-inner-spin-button {
   min-height: 576px;
   box-sizing: border-box;
   background-color: #ffffff;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
 }
 
 .modal-close {
@@ -1439,6 +1481,7 @@ input::-webkit-inner-spin-button {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
+  padding-right: 50px;
 }
 
 .modal-form-list {
@@ -1490,12 +1533,15 @@ input::-webkit-inner-spin-button {
   border: 0;
   background-color: #F2F2F2;
   border-radius: 4px;
-  padding: 12px 20px;
+  padding: 12px 50px 12px 12px;
   box-sizing: border-box;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
+  background-image: url(../images/calendar.svg);
+  background-repeat: no-repeat;
+  background-position: center right 22px;
 }
 
 .modal-counter {
@@ -1631,6 +1677,7 @@ input::-webkit-inner-spin-button {
 .tooltip-toggle:hover + .tooltip-text,
 .tooltip-toggle:focus + .tooltip-text {
   display: block;
+  box-shadow: 0 15px 30px 0 #0000003c;
 }
 
 .visually-hidden {
