--- a/styles/style.css
+++ b/styles/style.css
@@ -135,7 +135,9 @@ body {
 
 .header-navigation-link {
   display: block;
-  padding: 20px 16px;
+  padding: 20px 0;
+  margin-left: 16px;
+  margin-right: 16px;
   font-weight: 700;
 }
 
@@ -784,15 +786,14 @@ body {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  align-content: center;
   min-height: 120px;
-  padding: 0 70px;
+  padding: 45px 70px 0 70px;
   background-color: #ffffff;
+  box-sizing: border-box;
 }
 
 .social-media-list {
   display: flex;
-  align-items: center;
 }
 
 .social-media-link {
@@ -947,6 +948,14 @@ body {
   height: 20px;
   top: 5px;
   left: 4px;
+}
+
+.control-input[type='checkbox']:focus + .control-mark {
+  outline: 3px solid #83B3D3;
+}
+
+.control-input[type='radio']:focus + .control-mark-sercule {
+  outline: 3px solid #83B3D3;
 }
 
 .control-mark-sercule {
@@ -1326,12 +1335,21 @@ input::-webkit-inner-spin-button {
   min-height: 52px;
   box-sizing: border-box;
   color: #ffffff  ;
-  background-color: #615048;
+  background-color: #756157;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
+}
+
+.search-hotel-link:hover {
+  background-color: #615048;
+}
+
+.search-hotel-link:active {
+  background-color: #756157;
+  color: #FFFFFF4D;
 }
 
 .catalog-pagination-item-ellipses {
@@ -1418,6 +1436,9 @@ input::-webkit-inner-spin-button {
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
+}
+
+.modal-window-close {
   display: none;
 }
 
@@ -1473,6 +1494,12 @@ input::-webkit-inner-spin-button {
   fill: rgba(0, 0, 0, 0.109);
 }
 
+.modal-close-svg {
+  position: absolute;
+  top: 19px;
+  left: 19px;
+}
+
 .modal-title {
   margin: 0;
   text-transform: uppercase;
@@ -1511,6 +1538,10 @@ input::-webkit-inner-spin-button {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.modal-label-mini {
+  position: relative;
 }
 
 .modal-alert {
@@ -1587,6 +1618,15 @@ input::-webkit-inner-spin-button {
   line-height: 24px;
 }
 
+.modal-botton-search:hover {
+  background-color: #68A2CA;
+}
+
+.modal-botton-search:active {
+  background-color: #68A2CA;
+  color: #FFFFFF4D;
+}
+
 .corent-container {
   position: relative;
 }
@@ -1614,6 +1654,11 @@ input::-webkit-inner-spin-button {
 .min-curent:focus path {
   fill: black;
   fill-opacity: 1;
+}
+
+.sum-curent:focus,
+.min-curent:focus {
+  border-radius: 4px;
   outline: 3px solid rgba(130, 179, 211, 1);
 }
 
@@ -1636,12 +1681,18 @@ input::-webkit-inner-spin-button {
 
 .tooltip {
   position: absolute;
-  top: 6px;
+  top: -1px;
   left: 60px;
   margin-top: 4px;
   margin-left: 2px;
   width: 16px;
   height: 16px;
+}
+
+.tooltip-icon {
+  position: absolute;
+  top: 8px;
+  left: 12px;
 }
 
 .tooltip-toggle {
