--- a/styles/style.css
+++ b/styles/style.css
@@ -1731,6 +1731,10 @@ input::-webkit-inner-spin-button {
   box-shadow: 0 15px 30px 0 #0000003c;
 }
 
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
